-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0 Alpha
-
None
-
-
95d127354887425b616a5087c24b6765b7bf907b
There are several bugs caused by the introduction of the fontsAlwaysScalable() property in ef4783d2978ec5edf1b90ef5a13467c6c9ee3df6.
1. The font dialog lists unsupported font sizes for bitmap fonts.
2. When selecting an unsupported size, the backend will still fall back to the supported size, but it will not be reflected in the QFontInfo data about the font.
3. When selecting a pixel size above 64 (the limit where we use QPainterPath to draw the font), the text will become invisible instead of falling back to the nearest supported size.
4. QTBUG-56659
The commit claims that all fonts are scalable on Windows, but this is not the case at all.
Also, even if it were the case, there is no reason to throw away the information about which font sizes are appropriate for the bitmap fonts.
For Gerrit Dashboard: QTBUG-56672 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
174609,5 | Windows: Don't claim bitmap fonts support all standard sizes | 5.8 | qt/qtbase | Status: MERGED | +2 | 0 |